@@ -1,16 +1,21 @@
 package com.example.demo.Services;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import com.example.demo.Entities.Product;
 import com.example.demo.Repositories.ProductRepo;
+import com.example.demo.dto.ProductRequest;
+import com.example.demo.dto.ProductResponse;
+
+import lombok.extern.slf4j.Slf4j;
 
 
 @Service
+@Slf4j
 public class ProductService {
 	
 	
@@ -18,21 +23,45 @@ public class ProductService {
 	private ProductRepo productRepo;
 	
 	
-	public Product saveProduct(Product product) {
-		return productRepo.save(product);
+	public void saveProduct(ProductRequest productResponse) {
+		
+		Product product  = Product.builder()
+				           .name(productResponse.getName())
+				           .price(productResponse.getPrice())
+				           .productId(0).build();
+		
+		Product myProduct =  productRepo.save(product);
+		log.info("Product with id {} is saved "+myProduct.getProductId());
 	}
 	
 	
-	public List<Product> getAllProducts(){
-		return productRepo.findAll().stream().collect(Collectors.toList());
+	public List<ProductResponse> getAllProducts(){
+		log.info("getAllProcts int the Product service is called");
+		return productRepo.findAll().stream().map(product -> mapProductToProductResponse(product)).toList();
 	}
 	
-    public Product getProductById(int productId){
-    	return productRepo.findById(productId).get();
+	
+	
+	private ProductResponse mapProductToProductResponse(Product product) {
+		return ProductResponse.builder()
+				              .name(product.getName())
+				              .price(product.getPrice())
+				              .productId(product.getProductId()).build();
+	}
+	
+	
+	
+	
+    public ProductResponse  getProductById(int productId){
+    	Product myProduct =  productRepo.findById(productId).orElse(new Product("UNKNOWN", 0, 0));
+    	ProductResponse productResponse = mapProductToProductResponse(myProduct);
+    	log.info("The getProductById method is called");
+    	return productResponse;
     }
     
     
     public String deleteAllProducts() {
+		log.info("deleteAllProducts int the Product service is called");
     	productRepo.deleteAll();
     	return "Products Deleted";
     }
